tests/theories/success/0200-section.ec
require import Int.

section.
end section.
