tests/theories/fail/0200-section-extra-close.ec
require import Int.

section.
end section.

end section. (* invalid *)
